# OpenCV_NumCpp_Boost_Template

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  Camera.cpp  SourceTest.cpp
